@@ -39,6 +39,7 @@
 
 
 #include <glib.h>
+#include <sstream>
 #include <string>
 #include <vector>
 
